# icp-evm-rust-bridge

./: .gitignore  .gitpod.yml  README.md  canister_ids.json  dfx.json  did.sh  install_and_deploy.sh  package-lock.json  package.json
.devcontainer/: devcontainer.json
backend/: Cargo.toml  backend.did
backend/src/: eth_call.rs  evm_rpc.rs  lib.rs  store_transactions.rs
scripts/: canister_urls.py
smart_contract/: Counter.json  hardhat.config.js  package-lock.json  package.json
smart_contract/scripts/: deploy.js
src/: App.scss  App.tsx  index.html
src/declarations/backend/: backend.did.d.ts  backend.did.js
src/declarations/evm_rpc/: evm_rpc.did  evm_rpc.did.d.ts  index.js
