[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ethers-core = "2.0.14"
getrandom = { version = "0.2", features = ["custom"] } 
hex = "0.4.3"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"   # Feel free to remove this dependency if you don't need timers
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.116"